# games

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  WEB.md  azero-test.html  index.html
.github/workflows/: ci.yml
assets/: azeroTest-BEfUjmhC.js  azgpu-qjTz9flN.js  main-1f8KAHK-.css  main-YFk57Hu-.js  web_engine_bg-D2DXC0zU.wasm  worker-DF19Nucr.js
azero/: fixtures.json
azinfer/: Cargo.toml
azinfer/examples/: gen_fixtures.rs  search_probe.rs
azinfer/src/: lib.rs  mcts.rs  model.rs
azinfer/tests/: golden.rs
azt/: Cargo.toml  board_server.py  health.py
azt/board/: index.html
azt/src/: eval.rs  export.rs  gauge.rs  main.rs  mcts.rs  net.rs  play.rs  selfplay.rs  train.rs  uci.rs
benches/: sim_bench.rs
cfr/: Cargo.toml  README.md
cfr-core/: README.md
cfr-core/src/: arena.rs  lib.rs  mccfr.rs  solver.rs
cfr-core/tests/: kuhn.rs
cfr/core/: Cargo.toml
cfr/core/src/: lib.rs  solver.rs
cfr/games/liars-dice/: Cargo.toml
cfr/games/liars-dice/examples/: play.rs
cfr/games/liars-dice/src/: lib.rs
cfr/games/twentyone/: Cargo.toml
game-core/: Cargo.toml  README.md
game-core/src/: arena.rs  hash.rs  json.rs  lib.rs  rand.rs  stats.rs  ui.rs
games/chess/: Cargo.toml
games/chess/examples/: play.rs
games/chess/src/: board.rs  encode.rs  lib.rs  movegen.rs  search.rs  ui.rs
games/chess/tests/: eval_ab.rs  perft.rs  rules.rs  search.rs
games/connect4/: Cargo.toml
games/connect4/src/: lib.rs  ui.rs
games/connect4/tests/: strength.rs
games/g2048/: Cargo.toml
games/g2048/examples/: bench.rs
games/g2048/src/: lib.rs  ui.rs
games/g2048/tests/: mcts.rs
games/go/: Cargo.toml
games/go/examples/: mcts_eval.rs
games/go/src/: knowledge.rs  lib.rs  ui.rs
games/go/tests/: knowledge.rs  rules.rs
games/liars-dice/: Cargo.toml  README.md
games/liars-dice/examples/: ab.rs  evaluate.rs  exploitability.rs  gauntlet.rs  league.rs  os_mccfr_ld.rs  play.rs  rollout_eval.rs  tune.rs
games/liars-dice/src/: agents.rs  lib.rs  ui.rs
games/othello/: Cargo.toml
games/othello/src/: eval.rs  lib.rs  ui.rs
games/othello/tests/: rules.rs  search.rs
games/snake/: Cargo.toml
games/snake/examples/: baseline.rs  bench.rs
games/snake/src/: lib.rs  ui.rs
games/snake/tests/: rules.rs
games/twentyone/: BAKEOFF.md  Cargo.toml  README.md
games/twentyone/examples/: play.rs  solve.rs
games/twentyone/src/: env.rs  game.rs  lib.rs  solver.rs  ui.rs
games/twentyone/tests/: rules_invariants.rs
lab/: Cargo.toml
lab/src/: artifacts.rs  compare.rs  lib.rs  main.rs  registry.rs  runner.rs
lab/tests/: registry.rs
legacy/twentyone-core/: README.md
legacy/twentyone-core/examples/: basic.rs  bench.rs
legacy/twentyone-core/src/: lib.rs  solver.rs
legacy/twentyone-py/: Cargo.toml  README.md
legacy/twentyone-py/python/twentyone/: __init__.py  __init__.pyi
legacy/twentyone-py/src/: lib.rs
legacy/twentyone-rl/: BAKEOFF.md  README.md  pyproject.toml
legacy/twentyone-rl/examples/: basic_play.py
legacy/twentyone-rl/scripts/: agents.py  arena.py  convergence.py  evaluate.py  experiment_search.py  play.py  train_solver.py
legacy/twentyone-rl/tests/: conftest.py
scripts/: CLAUDE.md  common.py  mccfr_agent.py  play_vs_agent.py  pyproject.toml  run_basic.py
solvers/: Cargo.toml
solvers/examples/: azero_chess.rs  azero_dashboard.html
solvers/src/: cfr.rs  lib.rs  mccfr.rs  mcts.rs  os_mccfr.rs  pg.rs  qlearn.rs  rollout.rs  search.rs  tabular.rs  td.rs
solvers/src/azero/: mlp.rs  mod.rs  puct.rs  rand.rs  search.rs  train.rs
solvers/tests/: alphabeta_games.rs  azero.rs  kuhn.rs  mccfr.rs  mcts.rs  mcts_variants.rs  os_mccfr.rs  pg.rs  qlearn.rs  rollout.rs  search_upgrades.rs
solvers/tests/common/: mod.rs
src/: CLAUDE.md  env.rs  lib.rs
tests/: draw_after_bust.rs  game_rules.rs  stand_debug.rs
twentyone-core/: CLAUDE.md  Cargo.toml
twentyone-core/examples/: basic.rs
twentyone-core/src/: env.rs  lib.rs  solver.rs
twentyone-core/tests/: rules_invariants.rs
twentyone-py/: CLAUDE.md  pyproject.toml
twentyone-py/python/twentyone/: __init__.py  __init__.pyi
twentyone-py/src/: lib.rs
twentyone-rl/: BAKEOFF.md  CLAUDE.md  README.md  pyproject.toml
twentyone-rl/examples/: basic_play.py  evaluate_agents.py  play_vs_agent.py  train_agent.py  train_deep_mccfr.py  train_mccfr.py  train_tabular_cfr.py
twentyone-rl/scripts/: agents.py  evaluate.py  gauntlet.py  train_solver.py
twentyone-rl/src/twentyone_rl/: __init__.py  display.py
twentyone-rl/src/twentyone_rl/agents/: __init__.py  broken_deep_mccfr.py  deep_mccfr.py  mccfr.py  tabular_cfr.py
twentyone-rl/src/twentyone_rl/agents/mccfr/: __init__.py  base.py  deep.py  tabular.py  utils.py
twentyone-rl/src/twentyone_rl/evaluation/: __init__.py  tournament.py
twentyone-rl/src/twentyone_rl/training/: __init__.py  utils.py
twentyone-rl/tests/: test_solver_e2e.py
web/: README.md
web/app/: azero-test.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/app/public/azero/: test.html
web/app/src/: azero-test.ts  main.ts  style.css
web/app/src/bots/: azero-chess.ts  index.ts
web/app/src/engine/: host.ts  protocol.ts  worker.ts
web/app/src/frontends/: generic.ts  index.ts  types.ts
web/app/src/frontends/2048/: index.ts
web/app/src/frontends/chess/: azgpu.ts  index.ts
web/app/src/frontends/connect4/: index.ts
web/app/src/frontends/go/: index.ts
web/app/src/frontends/liars-dice/: index.ts  style.ts
web/app/src/frontends/othello/: index.ts
web/app/src/frontends/snake/: index.ts
web/app/src/frontends/twentyone/: index.ts
web/app/src/shell/: app.ts  tournament.ts
web/engine/: Cargo.toml  smoke.mjs
web/engine/src/: az.rs  lib.rs
