# Workspace for the games lab: `cfr-core` holds the algorithms (the Game trait,
# CFR variants, exact exploitability, the arena); `games/*` are games
# implemented against it.
[workspace]
resolver = "2"
members = ["cfr-core", "games/liars-dice", "games/twentyone", "games/chess"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
cfr-core = { path = "cfr-core" }
rayon = "1.10"
