# Workspace for the games lab: `game-core` holds the algorithms (the Game trait,
# CFR variants, exact exploitability, the arena); `games/*` are games
# implemented against it.
[workspace]
resolver = "2"
members = ["game-core", "solvers", "games/liars-dice", "games/twentyone", "games/chess", "games/othello", "games/go", "games/connect4", "games/g2048", "games/snake", "lab", "web/engine"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
game-core = { path = "game-core" }
rayon = "1.10"
