[package]
name = "azinfer"
version = "0.1.0"
edition = "2024"
description = "Torch-free azero chess inference: solvers' batched park/resume PUCT instantiated for chess, and a pure-Rust forward for exported nets (wasm-safe; the browser's WebGPU path validates against it)"

[dependencies]
chess = { path = "../games/chess" }
game-core = { path = "../game-core" }
solvers = { path = "../solvers", default-features = false }
