[package]
name = "web-engine"
version = "0.1.0"
edition = "2024"
description = "wasm-bindgen bindings over the lab's registry and matches: the browser engine for the games arcade (see WEB.md)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
azinfer = { path = "../../azinfer" }
chess = { path = "../../games/chess" }
game-core = { workspace = true }
lab = { path = "../../lab", default-features = false }
serde_json = "1"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
